--- a/sites/all/themes/auge-theme/sass/partials/components/panels/_frontpage.scss
+++ b/sites/all/themes/auge-theme/sass/partials/components/panels/_frontpage.scss
@@ -8,7 +8,10 @@
   }
   padding: 30px 0;
   .pane-title{
-    font-size: 4.5rem;
+    font-size: 4rem;
+    @include media(380px){
+      font-size: 4.5rem;
+    }
     margin: 0 0 0 25%;
   }
   p:nth-child(1){
